refactor: 관리 기능 요청 및 응답 구조 리팩토링